<resources>

    <string name="app_name">View Contact</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">DingalM.EnriquezZ.Act01</string>
	
    <string name="strEdit">Edit</string>
    <string name="strDelete">Delete</string>
    <string name="strBack">Back</string>
    <string name="strName">Name: </string>
    <string name="strPhone">Phone Number: </string>
    <string name="strEmail">Email Address: </string>
    <string name="strSave">Save</string>
    <string name="lblEdit">Edit Contact</string>
    
</resources>