<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#83DDED"
    tools:ignore="ExtraText" >

    <TextView
        android:id="@+id/c_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="30dp"
        android:textStyle="bold" />"

    <TextView
        android:id="@+id/c_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/c_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:textSize="13dp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/c_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/c_number"
        android:gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:textSize="13dp"
        android:textStyle="italic" />
	
    <Button 
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        android:padding="5dp"
        android:text="@string/strBack" />
    
    <Button
        android:id="@+id/edit"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_above="@id/back"
        android:layout_marginTop="240dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:padding="5dp"
        android:text="@string/strEdit" />

    <Button
        android:id="@+id/delete"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_above="@id/back"
        android:layout_toRightOf="@id/edit"
        android:layout_marginTop="240dp"
        android:layout_marginBottom="10dp"
        android:padding="10dp"
        android:text="@string/strDelete" />

</RelativeLayout>